CI refactoring WIP
This commit generated the initial python packages manually uploaded to
PyPI as Bungeegum version 0.1.0. This is a work in progress and should
not be merged to main as is. The high level changes in this commit are:

* Makefile
  - Move Frida and Bungeegum version info to pyproject.toml
  - Remove python target, don't pip install incremental dev versions
  - Add package target, creates binary wheel and tgz source artifacts
  - Rework test target to work with package artifacts and installed BG
  - Add CLEAN_PATHS to avoid too-long target error in checkmake

* pyproject.toml (new file)
  - Use setuptools_scm to derive version info
  - Declare concrete dependency version info (Frida)

* setup.py (removed)
  - Converted (mostly) to pyproject.toml

* __init__.py
  - Initialize setuptools_scm generated version information

* bg.py
  - Add --version option

* .github/*.yml
  - Add github workflow ymls.
  - THESE HAVE NOT BEEN TESTED

TODO

* Clean up Makefile
* Test .github workflow
* Verify setuptools_scm does the right thing with new version tags

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,14 +1,14 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=64.0", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "bungeegum"
-version = "0.1.0"
+dynamic = ["version"]
 authors = [{ name = "Zetier" }]
 description = "A set of tools to test payloads within the context of a standard Android application"
 readme = "README.md"
-dependencies = ['adbutils==2.7.*', 'frida==16.4.*', 'importlib_resources==6.4.*']
+dependencies = ['adbutils==2.7.*', 'frida==16.4.10', 'importlib_resources==6.4.*']
 requires-python = ">=3.8"
 
 classifiers = [
@@ -28,8 +28,20 @@ keywords = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/Zetier/bungeegum"
-"Bug Tracker" = "https://github.com/Zetier/bungeegum/issues"
+Repository = "https://github.com/Zetier/bungeegum"
+Issues = "https://github.com/Zetier/bungeegum/issues"
 
 [project.scripts]
-bungeegum = "bungeegum.bungeegum:main"
+bungeegum = "bungeegum.bg:main"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+bungeegum = ["*.js", "*.apk"]
+
+[tool.setuptools_scm]
+version_file= "src/bungeegum/_version.py"
+root = ".."
+version_scheme = "only-version"
+local_scheme = "no-local-version"
