Fix mypi linter

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -34,6 +34,10 @@ Issues = "https://github.com/Zetier/bungeegum/issues"
 [project.scripts]
 bungeegum = "bungeegum.bg:main"
 
+[tool.mypy]
+ignore_missing_imports = true
+disallow_untyped_defs = true
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
