--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,16 +4,6 @@ on:
   workflow_call:
 
 jobs:
-  mypy:
-    runs-on: ubuntu-latest
-    name: mypy
-    steps:
-    - uses: actions/checkout@v1
-    - name: mypy
-      uses: docker://ghcr.io/zetier/dockerized_mypy:3.8-1.3.0
-      with:
-        args: .
-
   black:
     runs-on: ubuntu-latest
     name: black
@@ -33,3 +23,13 @@ jobs:
       uses: docker://linedwell/pylint:py3
       with:
         args: pylint --disable=E0401 python/src/bungeegum
+
+  mypy:
+    runs-on: ubuntu-latest
+    name: mypy
+    steps:
+    - uses: actions/checkout@v1
+    - name: mypy
+      uses: docker://ghcr.io/zetier/dockerized_mypy:3.8-1.3.0
+      with:
+        args: --config python/pyproject.toml python/src/bungeegum
